infrastructure/configs/network-policies/centralino/policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-esp32
spec:
  podSelector:
    matchLabels:
      app: centralino
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: ${ESP32_SALA_IP}/32
        - ipBlock:
            cidr: ${ESP32_TAVERNA_IP}/32
        - ipBlock:
            cidr: ${ESP32_GARAGE_IP}/32
      ports:
        - port: 80
          protocol: TCP
